# fiam-llm-alpha

./: .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  cursor.rules.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
config/: defaults.yaml
docs/: ALIGNMENT.md  DATA_DICTIONARY.md  EXPERIMENTS.md  METHOD.md  README.md
runbooks/: 00_build_embeddings.py  01_make_text_features.py  02_fit_text_models.py  03_blend_with_quant.py  04_generate_scores_csv.py  05_backtest_eval.py  06_numeric_and_blend.py  07_apply_risk_and_save_period_csvs.py  08_backtest_from_final_weights.py
src/: model_numeric.py  period_io.py  risk_interface.py  weights_blend.py
src/fiam_llm/: __init__.py  backtest.py  calibrate.py  embedder.py  features_text.py  io_loaders.py  model_text_en.py  reporting.py  stack_blend.py  text_clean.py
tests/: conftest.py  test_alignment.py  test_backtest.py  test_backtest_metrics.py  test_blend_consistency.py  test_calibration.py  test_composite_freeze.py  test_e2e_scores_schema.py  test_embedder.py  test_embedder_hf_path.py  test_expanding_window.py  test_features_temporal.py  test_features_text.py  test_io_helpers.py  test_mlflow_smoke.py  test_model_numeric.py  test_model_text_en_nonlex.py  test_period_io.py  test_reporting.py  test_stack_blend.py  test_text_clean.py  test_turnover_banding.py  test_turnover_reduction.py  test_weights_blend.py  test_windows_exact.py
